feat: adiciona validação de nível de acesso para apis de restaurant